--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/ASExplorer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ejb.jar=ext-libs/ejb.jar
 file.reference.ext-libs-ext=ext-libs/ext/
 file.reference.java-getopt-1.0.14.jar-1=ext-libs/java-getopt-1.0.14.jar
 file.reference.log4j-1.2.17.jar=ext-libs/log4j-1.2.17.jar
@@ -41,21 +42,22 @@ javac.classpath=\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.ext-libs-ext}:\
     ${file.reference.text-table-formatter-1.1.2.jar}:\
-    ${file.reference.java-getopt-1.0.14.jar-1}
+    ${file.reference.java-getopt-1.0.14.jar-1}:\
+    ${file.reference.ejb.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=true
+javadoc.author=false
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -63,7 +65,7 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=true
+javadoc.version=false
 javadoc.windowtitle=
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
